        PR tree-optimization/51058         * tree-vect-slp.c (vect_get_constant_vectors): Handle CALL_EXPR.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181251 138bc75d-0d04-0410-961f-82ee72b054a4